# tinli

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  requirements-dev.txt
services/api/: pyproject.toml
services/api/tests/: conftest.py  test_byok.py  test_event_map.py  test_healthz.py  test_history.py  test_kalshi_adapter.py  test_polymarket_adapter.py  test_stats.py  test_stream.py  test_ts_types.py  test_v1_api.py  test_v1_risk.py
services/api/tests/fixtures/: manifest.json  positions_example.yaml
services/api/tests/fixtures/kalshi/: market_KXATP-26WIM-AUG.json  market_KXATP-26WIM-DJO.json  market_KXATP-26WIM-FRI.json  market_KXATP-26WIM-SIN.json  market_KXATPMATCH-26JUL06DECOB-DE.json  market_KXATPMATCH-26JUL06DIMFER-DIM.json  market_KXATPMATCH-26JUL06FRIBUB-FRI.json  market_KXBALLONDOR-26-HKAN.json  market_KXBALLONDOR-26-LYAM.json  market_KXBALLONDOR-26-RODR.json  market_KXFEDDECISION-26JUL-C25.json  market_KXFEDDECISION-26JUL-H0.json  market_KXMENWORLDCUP-26-AR.json  market_KXMENWORLDCUP-26-ES.json  market_KXNEXTTEAMNBA-26LJAM-GSW.json  market_KXNEXTTEAMNBA-26LJAM-NYK.json  market_KXNEXTTEAMNBA-26LJAM-SAS.json  market_KXWCADVANCE-26JUL06PORESP-POR.json  market_KXWCADVANCE-26JUL06USABEL-USA.json  market_KXWCADVANCE-26JUL07ARGEGY-ARG.json  market_KXWCADVANCE-26JUL07SUICOL-SUI.json  market_KXWCBESTHOST-26-USA.json  (+44 more)
services/api/tinli_api/: datasource.py  history.py  main.py  routes.py  screener.py  stats.py  stream.py
services/api/tinli_api/venues/: client.py  kalshi.py  kalshi_auth.py  polymarket.py
(+100 files in other folders)
