[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinli-api"
version = "0.1.0"
description = "Tinli FastAPI service: unified markets, divergence, risk endpoints"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6",
    "cachetools>=5",
    "tinli-schema",
    "tinli-risk",
    "tinli-divergence",
]

[tool.hatch.build.targets.wheel]
packages = ["tinli_api"]
