[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinli-api"
version = "0.1.0"
description = "Tinli FastAPI service: unified markets, divergence, risk endpoints"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # M8 stream client (Polymarket CLOB websocket); uvicorn[standard] already
    # ships it — pinned here because tinli_api imports it directly
    "websockets>=12",
    "httpx>=0.27",
    "pyyaml>=6",
    "cachetools>=5",
    "pyarrow>=17",
    # pyarrow needs the IANA tz database to read tz-aware timestamps; Windows
    # has no system copy, so ship the Python package everywhere
    "tzdata",
    "tinli-schema",
    "tinli-risk",
    "tinli-divergence",
]

[tool.hatch.build.targets.wheel]
packages = ["tinli_api"]
